--- a/css/resume.css
+++ b/css/resume.css
@@ -9,14 +9,14 @@
     padding-top: 54px;
     color: #868e96;
   }
-  
+
   @media (min-width: 992px) {
     body {
       padding-top: 0;
       padding-left: 17rem;
     }
   }
-  
+
   h1,
   h2,
   h3,
@@ -28,32 +28,32 @@
     text-transform: uppercase;
     color: #343a40;
   }
-  
+
   h1 {
     font-size: 6rem;
     line-height: 5.5rem;
   }
-  
+
   h2 {
     font-size: 3.5rem;
   }
-  
+
   h3 {
     font-size: 2rem;
   }
-  
+
   p.lead {
     font-size: 1.15rem;
     font-weight: 400;
   }
-  
+
   .subheading {
     text-transform: uppercase;
     font-weight: 500;
     font-family: 'Saira Extra Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
     font-size: 1.5rem;
   }
-  
+
   .social-icons a {
     display: inline-block;
     height: 3.5rem;
@@ -66,35 +66,35 @@
     line-height: 3.5rem;
     margin-right: 1rem;
   }
-  
+
   .social-icons a:last-child {
     margin-right: 0;
   }
-  
+
   .social-icons a:hover {
     background-color: #BD5D38;
   }
-  
+
   .dev-icons {
     font-size: 3rem;
   }
-  
+
   .dev-icons .list-inline-item i:hover {
     color: #BD5D38;
   }
-  
-  #sideNav .navbar-nav .nav-item .nav-link {
+
+  #site-navigation .navbar-nav .nav-item .nav-link {
     font-weight: 800;
     letter-spacing: 0.05rem;
     text-transform: uppercase;
   }
-  
-  #sideNav .navbar-toggler:focus {
+
+  #site-navigation .navbar-toggler:focus {
     outline-color: #d48a6e;
   }
-  
+
   @media (min-width: 992px) {
-    #sideNav {
+    #site-navigation {
       text-align: center;
       position: fixed;
       top: 0;
@@ -109,19 +109,22 @@
       width: 17rem;
       height: 100vh;
     }
-    #sideNav .navbar-brand {
+    #site-navigation .navbar-brand {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
       margin: auto auto 0;
       padding: 0.5rem;
     }
-    #sideNav .navbar-brand .img-profile {
+    #site-navigation .navbar-brand .img-profile {
       max-width: 10rem;
       max-height: 10rem;
       border: 0.5rem solid rgba(255, 255, 255, 0.2);
     }
-    #sideNav .navbar-collapse {
+    #site-navigation .navbar-brand a.img-profile {
+      border: none;
+    }
+    #site-navigation .navbar-collapse {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -134,31 +137,31 @@
       width: 100%;
       margin-bottom: auto;
     }
-    #sideNav .navbar-collapse .navbar-nav {
+    #site-navigation .navbar-collapse .navbar-nav {
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
       flex-direction: column;
       width: 100%;
     }
-    #sideNav .navbar-collapse .navbar-nav .nav-item {
+    #site-navigation .navbar-collapse .navbar-nav .nav-item {
       display: block;
     }
-    #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
+    #site-navigation .navbar-collapse .navbar-nav .nav-item .nav-link {
       display: block;
     }
   }
-  
+
   section.resume-section {
     padding-top: 5rem !important;
     padding-bottom: 5rem !important;
     max-width: 75rem;
   }
-  
+
   section.resume-section .resume-item .resume-date {
     min-width: none;
   }
-  
+
   @media (min-width: 768px) {
     section.resume-section {
       min-height: 100vh;
@@ -167,27 +170,26 @@
       min-width: 18rem;
     }
   }
-  
+
   @media (min-width: 992px) {
     section.resume-section {
       padding-top: 3rem !important;
       padding-bottom: 3rem !important;
     }
   }
-  
+
   .bg-primary {
     background-color: #BD5D38 !important;
   }
-  
+
   .text-primary {
     color: #BD5D38 !important;
   }
-  
+
   a {
     color: #BD5D38;
   }
-  
+
   a:hover, a:focus, a:active {
     color: #824027;
   }
-  
